recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:4: error: not found: value occurences
  else if (l.head==v) 1 + occurences(l.tail,v)
                          ^Occurrences:5: error: not found: value occurences
  else occurences(l.tail,v)
       ^